;-*-rst-*-

=========================
p4a.plonecalendar Changes
=========================

p4a.plonecalendar 2.0a? (xxxx-xx-xx)
====================================

* Fixed an issue where a recurring event would show up in TopicEventProvider
  results no matter what the criteria on the topic were. (claytron)

p4a.plonecalendar 2.0a2 (2008-10-04)
====================================

* Implemented the canCreate method for the ATEventCreator so that the 'Add...'
  does not show for anonymous. (claytron)

* Updated the way we get all the events in the exportCalendar method and
  added parameters for restricting the export. (lucielejard)

* Various fixes in the recurring event support.


p4a.plonecalendar 2.0a1 (2008-07-09)
====================================

* Reworked to use dateables views and interfaces instead of p4a.calendar.

* Package is now installable via CMFQuickInstaller.

* Dependentent package slugs are now included (meta and regular).


p4a.plonecalendar 1.1 (2008-04-12)
==================================

* Updated documentation

* Fixed some install bugs under Plone 2.5.


p4a.plonecalendar 1.1b1 (2008-02-20)
====================================

New features
------------

* Plone 3 support.

* Now uses p4a.subtyper.

Bugfixes
--------

* Various timezone fixes, and some minor fixes.


p4a.plonecalendar 1.0 (2007-10-14)
==================================

Bugfixes
--------

* Fixed issue #24 where folders created by uploading ICS files via
  webdav were not becoming calendar enhanced (Rocky Burt)

* Fixed issue #41 where regular users couldn't activate their
  own folders to be calendars (Rocky Burt)

p4a.plonecalendar 1.0rc1 (2007-07-31)
=====================================

Bugfixes
--------

* Many bug fixes (resulting from Boston 2007 P4A sprint)

* #40 - Events not displayed in Month View on Windows IE6. Default install would not display events in IE 6.  Rob Baker supplied fix.
