@@ -7,6 +7,9 @@ p4a.plonecalendar Changes
 p4a.plonecalendar 2.0a? (xxxx-xx-xx)
 ====================================
 
+* Fixed issue where a TopicEventProvider died on topics with no criteria. This
+  fixes #152 (claytron)
+
 * Fixed an issue where a recurring event would show up in TopicEventProvider
   results no matter what the criteria on the topic were. (claytron)
 
